Down for maintenance

--- a/index.htm
+++ b/index.htm
@@ -37,11 +37,13 @@
 				<h1>Mary Baker Eddy's Church and Deeds Restoration Fund</h1>
 
 				<nav>
+					<!--
 					<ul>
 						<li ng-repeat="link in main" ng-class="{active:($route.current.id == link.id || $route.current.parent == link.id)}">
 							<a data-spy="{{link.id}}" data-navitem href="{{link.uri}}">{{link.name}}</a>
 						</li>
 					</ul>
+					-->
 				</nav>
 
 			</div>
@@ -58,6 +60,10 @@
 	<div id="content_area" ng-class="{sub:$route.current.parent}">
 
 		<div class="page">
+
+			<h1>Thankyou for your interest. Our website is currently being updated and will be available again soon.</h1>
+
+			<!--
 
 			<div data-ng-switch data-on="$route.current.parent" class="subnav_wrapper">
 
@@ -157,7 +163,7 @@
 
 			<div data-ng-view></div>
 
-
+			-->
 		</div>
 
 	</div>
